<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="12dp"
    android:layout_marginVertical="5dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="3dp"
    app:cardBackgroundColor="?attr/colorSurface"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="12dp"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/ivIcon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/bdui_icon"
            android:scaleType="centerInside"
            android:src="@drawable/ic_logs_button"
            app:tint="?android:attr/textColor" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="?android:attr/textColor" />

            <TextView
                android:id="@+id/btnMore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/bdui_more"
                android:textColor="?attr/colorSecondary" />
        </LinearLayout>

        <ImageButton
            android:id="@+id/btnDelete"
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/bdui_delete"
            android:src="@drawable/ic_delete_button"
            app:tint="?android:attr/textColor" />

    </LinearLayout>

</androidx.cardview.widget.CardView>